added repository, index.html, style.css

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
 server.port=8888
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/xlsx
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jackson.serialization.indent_output=true
+
+xslxparser.sheetIndex=0
 xslxparser.locationRowIndex=1
 xslxparser.weightRowIndex=25
